--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -23,50 +23,83 @@
 <div class="docs-section" id="sentiment">
     <h4 class="docs-header">TRADER SENTIMENT</h4>
     <hr>
-    <!-- IG MARKETS ROW -->
+    <!-- SENTIMENT -->
     <div class="row">   
-        <div class="two column"> 
+        <!-- IG MARKETS -->
+        <div class="three columns"> 
             <h5>IG MARKETS</h5>
             <!-- USD/JPY -->
             <div class="chart_long">
                 <h6>USD/JPY</h6>
-                <div style="width: {{ usd_jpy_long }}px;">{{ usd_jpy_long }}%</div>
+                <div style="width: {{ ig_usd_jpy_long }}px;">{{ ig_usd_jpy_long }}%</div>
             </div>    
             <div class="chart_short">
-                <div style="width: {{ usd_jpy_short }}px;">{{ usd_jpy_short }}%</div>
+                <div style="width: {{ ig_usd_jpy_short }}px;">{{ ig_usd_jpy_short }}%</div>
             </div>
             <br>
             <!-- EUR/USD -->    
             <div class="chart_long">
                 <h6>EUR/USD</h6>
-                <div style="width: {{ eur_usd_long }}px;">{{ eur_usd_long }}%</div>
+                <div style="width: {{ ig_eur_usd_long }}px;">{{ ig_eur_usd_long }}%</div>
             </div>
             <div class="chart_short">
-                <div style="width: {{ eur_usd_long }}px;">{{ eur_usd_short }}%</div>
+                <div style="width: {{ ig_eur_usd_long }}px;">{{ ig_eur_usd_short }}%</div>
             </div>  
             <br> 
             <!-- GBP/USD -->
             <div class="chart_long">
                 <h6>GBP/USD</h6>
-                <div style="width: {{ gbp_usd_long }}px;">{{ gbp_usd_long }}%</div>
+                <div style="width: {{ ig_gbp_usd_long }}px;">{{ ig_gbp_usd_long }}%</div>
             </div>
             <div class="chart_short">
-                <div style="width: {{ gbp_usd_short }}px;">{{ gbp_usd_short }}%</div>
+                <div style="width: {{ ig_gbp_usd_short }}px;">{{ ig_gbp_usd_short }}%</div>
             </div>
             <br>
             <!-- AUD/USD -->
             <div class="chart_long">
                 <h6>AUD/USD</h6>
-                <div style="width: {{ aud_usd_long }}px;">{{ aud_usd_long }}%</div>
+                <div style="width: {{ ig_aud_usd_long }}px;">{{ ig_aud_usd_long }}%</div>
             </div>
             <div class="chart_short">
-                <div style="width: {{ aud_usd_short }}px;">{{ aud_usd_short }}%</div>
+                <div style="width: {{ ig_aud_usd_short }}px;">{{ ig_aud_usd_short }}%</div>
             </div>
         </div>
-    </div>
+        
+        <!-- DAILY FOREX ROW -->
+        <div class="three columns">
+            <h5>DAILY FOREX</h5>
+            
+            <!-- USD/JPY -->
+            <div class="chart_long">
+                <h6>USD/JPY</h6>
+                <div style="width: {{ dy_eur_usd_long }}px;">{{ dy_eur_usd_long }}%</div>
+            </div>
+            <div class="chart_short">
+                <div style="width: {{ dy_eur_usd_short }}px;">{{ dy_eur_usd_short }}%</div>
+            </div>
+
+
+            <!-- EUR/USD -->
+            <div class="chart_long">
+                <h6>EUR/USD</h6>
+                <div style="width: {{ dy_eur_usd_long }}px;">{{ dy_eur_usd_long }}%</div>
+            </div>
+            <div class="chart_short">
+                <div style="width: {{ dy_eur_usd_short }}px;">{{ dy_eur_usd_short }}%</div>
+            </div>
+
+            <!-- AUD/USD -->
+            
+            <div class="chart_long">
+                <h6>USD/JPY</h6>
+                <div style="width: {{ dy_eur_usd_long }}px;">{{ dy_eur_usd_long }}%</div>
+            </div>
+            <div class="chart_short">
+                <div style="width: {{ dy_eur_usd_short }}px;">{{ dy_eur_usd_short }}%</div>
+            </div>
+
+        </div>
+    </div> <!-- END SENTIMENT -->
     <hr>    
-    <br> 
-    <h6 class="docs-header">DAILY FX</h6>
-    
 </div>
 {% endblock %}
