start on text analysis

--- a/templates/trader.html
+++ b/templates/trader.html
@@ -72,13 +72,12 @@
             <!-- USD/JPY -->
             <div class="chart_long">
                 <h6>USD/JPY</h6>
-                <div style="width: {{ dy_eur_usd_long }}px;">{{ dy_eur_usd_long }}%</div>
+                <div style="width: {{ dy_usd_jpy_long }}px;">{{ dy_usd_jpy_long }}%</div>
             </div>
             <div class="chart_short">
-                <div style="width: {{ dy_eur_usd_short }}px;">{{ dy_eur_usd_short }}%</div>
+                <div style="width: {{ dy_usd_jpy_short }}px;">{{ dy_usd_jpy_short }}%</div>
             </div>
-
-
+            <br>
             <!-- EUR/USD -->
             <div class="chart_long">
                 <h6>EUR/USD</h6>
@@ -87,15 +86,23 @@
             <div class="chart_short">
                 <div style="width: {{ dy_eur_usd_short }}px;">{{ dy_eur_usd_short }}%</div>
             </div>
-
-            <!-- AUD/USD -->
-            
+            <br>
+            <!-- GBP/USD -->
             <div class="chart_long">
-                <h6>USD/JPY</h6>
-                <div style="width: {{ dy_eur_usd_long }}px;">{{ dy_eur_usd_long }}%</div>
+                <h6>GBP/USD</h6>
+                <div style="width: {{ dy_gbp_usd_long }}px;">{{ dy_gbp_usd_long }}%</div>
             </div>
             <div class="chart_short">
-                <div style="width: {{ dy_eur_usd_short }}px;">{{ dy_eur_usd_short }}%</div>
+                <div style="width: {{ dy_gbp_usd_short }}px;">{{ dy_gbp_usd_short }}%</div>
+            </div>
+            <br>
+            <!-- AUD/USD -->
+            <div class="chart_long">
+                <h6>AUD/USD</h6>
+                <div style="width: {{ dy_aud_usd_long }}px;">{{ dy_aud_usd_long }}%</div>
+            </div>
+            <div class="chart_short">
+                <div style="width: {{ dy_aud_usd_short }}px;">{{ dy_aud_usd_short }}%</div>
             </div>
 
         </div>
